<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listweekdayRowModel" type="com.front_end.app.modules.work.data.model.ListweekdayRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnweekday"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylelight_green_100cornerRadius">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtWeekday"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listweekdayRowModel.txtWeekday}"
            style="@style/txtRobotomedium16" tools:text="@string/msg_group_run_wedne"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listweekdayRowModel.txtTime}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_35_mins"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHinesDrive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listweekdayRowModel.txtHinesDrive}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_hines_drive"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtYouKatieFour"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listweekdayRowModel.txtYouKatieFour}"
            style="@style/txtRobotoregular14" tools:text="@string/lbl_you_katie_4"/>
    </LinearLayout>
</layout>
