<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="targetVM" type="com.front_end.app.modules.target.data.viewmodel.TargetVM"/>
    </data>
    <FrameLayout android:id="@+id/frameTarget"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/image360F247848348"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_360f247848348}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_360f247848348"/>
        <LinearLayout android:id="@+id/linearColumnfour"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24pxh"
            android:layout_marginVertical="@dimen/_24pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtFour"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{targetVM.targetModel.txtFour}"
                style="@style/txtPoppinsbold24" tools:text="@string/lbl"/>
            <TextView android:gravity="start"
                android:id="@+id/txtWhatsyourTar"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:text="@{targetVM.targetModel.txtWhatsyourTar}"
                style="@style/txt_3" tools:text="@string/msg_what_s_your_tar"/>
            <EditText android:background="@android:color/transparent"
                android:ellipsize="end" android:hint="@string/lbl_killo"
                android:id="@+id/etColumnrectangletwentyfive"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={targetVM.targetModel.etColumnrectangletwentyfiveValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
            <TextView android:gravity="start"
                android:id="@+id/txtWeusethisdat"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_68pxh"
                android:layout_marginStart="@dimen/_68pxh"
                android:layout_marginTop="@dimen/_51pxv"
                android:layout_width="match_parent"
                android:text="@{targetVM.targetModel.txtWeusethisdat}"
                style="@style/txt_4" tools:text="@string/msg_we_use_this_dat"/>
            <LinearLayout android:id="@+id/linearRowback"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBack"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.52"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{targetVM.targetModel.txtBack}"
                    style="@style/txtPoppinsbold24_1" tools:text="@string/lbl_back"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNext"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_46pxh"
                    android:layout_marginStart="@dimen/_133pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.48"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{targetVM.targetModel.txtNext}"
                    style="@style/txtPoppinsbold24_1" tools:text="@string/lbl_next"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
