<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="weightVM" type="com.front_end.app.modules.weight.data.viewmodel.WeightVM"/>
    </data>
    <FrameLayout android:id="@+id/frameWeight"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/image360F247848348"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_360f247848348}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_360f247848348"/>
        <LinearLayout android:id="@+id/linearColumnthree"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtThree"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_116pxh"
                android:layout_marginStart="@dimen/_116pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{weightVM.weightModel.txtThree}"
                style="@style/txtPoppinsbold24" tools:text="@string/lbl"/>
            <TextView android:gravity="start"
                android:id="@+id/txtWhatsyourCur"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:text="@{weightVM.weightModel.txtWhatsyourCur}"
                style="@style/txt_2" tools:text="@string/msg_what_s_your_cur"/>
            <EditText android:background="@android:color/transparent"
                android:ellipsize="end" android:hint="@string/lbl_kg"
                android:id="@+id/etRectangleTwentyOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_115pxh"
                android:layout_marginStart="@dimen/_115pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={weightVM.weightModel.etRectangleTwentyOneValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
            <TextView android:gravity="start"
                android:id="@+id/txtWeusethisdat"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_68pxh"
                android:layout_marginStart="@dimen/_68pxh"
                android:layout_marginTop="@dimen/_59pxv"
                android:layout_width="match_parent"
                android:text="@{weightVM.weightModel.txtWeusethisdat}"
                style="@style/txt_3" tools:text="@string/msg_we_use_this_dat"/>
            <LinearLayout android:id="@+id/linearRowback"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBack"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.52"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{weightVM.weightModel.txtBack}"
                    style="@style/txtPoppinsbold24" tools:text="@string/lbl_back"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNext"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_46pxh"
                    android:layout_marginStart="@dimen/_133pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.48"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{weightVM.weightModel.txtNext}"
                    style="@style/txtPoppinsbold24" tools:text="@string/lbl_next"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
