<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listavocadoRowModel" type="com.front_end.app.modules.lunch.data.model.ListavocadoRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowavocado"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStyle">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnavocado"
            android:layout_height="wrap_content"
            android:layout_weight="0.88" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtAvocado"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listavocadoRowModel.txtAvocado}"
                style="@style/txtSFCompactDisplaylight11" tools:text="@string/lbl_avocado"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtMediumCounter"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listavocadoRowModel.txtMediumCounter}"
                style="@style/txtSFCompactDisplaylight11" tools:text="@string/lbl_1_medium"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTwoHundredForty"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_weight="0.12" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listavocadoRowModel.txtTwoHundredForty}"
            style="@style/txtSFCompactDisplaylight11" tools:text="@string/lbl_240"/>
    </LinearLayout>
</layout>
